--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Mi pagina web</title>
 </head>
 <body>
-    
+    <img src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcRm39Kp94VuOjP6lWfSrNKA7XPQEJtEzLysoUjEmVVNByj22NfRRvyg-lRWbzOWyQRV-Zf-ARQ302EaAWI" 
+    width="400"
+    height="341"/>
 </body>
 </html>
