--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> Los Delfines los humanos en el oceano </h1>
+    <h3> Los delfines son criaturas fascinantes y enigmáticas que tienen varias características inusuales que los hacen destacar en el reino animal. </h3>
     <img src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcRm39Kp94VuOjP6lWfSrNKA7XPQEJtEzLysoUjEmVVNByj22NfRRvyg-lRWbzOWyQRV-Zf-ARQ302EaAWI" 
     width="400"
     height="341"/>
