Agregue el primer punto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1> Los Delfines los humanos en el oceano </h1>
     <h3> Los delfines son criaturas fascinantes y enigmáticas que tienen varias características inusuales que los hacen destacar en el reino animal. </h3>
+    <h3> 1. Cerebro grande: Los delfines tienen cerebros relativamente grandes en comparación con su tamaño corporal. Se ha observado que tienen una alta capacidad cognitiva y habilidades de resolución de problemas. </h3>
     <img src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcRm39Kp94VuOjP6lWfSrNKA7XPQEJtEzLysoUjEmVVNByj22NfRRvyg-lRWbzOWyQRV-Zf-ARQ302EaAWI" 
     width="400"
     height="341"/>
