--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h3> Los delfines son criaturas fascinantes y enigmáticas que tienen varias características inusuales que los hacen destacar en el reino animal. </h3>
     <h3> 1. Cerebro grande: Los delfines tienen cerebros relativamente grandes en comparación con su tamaño corporal. Se ha observado que tienen una alta capacidad cognitiva y habilidades de resolución de problemas. </h3>
     <h3> 2. Comunicación compleja: Los delfines son conocidos por su comunicación intrincada y la capacidad de emitir una variedad de sonidos, incluyendo silbidos, chasquidos y clics. Se cree que estos sonidos se utilizan para la comunicación entre ellos y la ecolocalización. </h3>
+    <h3> 3. Sexo recreativo: Los delfines son uno de los pocos animales que se sabe que tienen sexo recreativo, lo que significa que pueden tener relaciones sexuales sin fines de reproducción. Esto sugiere que su comportamiento sexual va más allá del instinto reproductivo.</h3>
     <img src="https://encrypted-tbn1.gstatic.com/licensed-image?q=tbn:ANd9GcRm39Kp94VuOjP6lWfSrNKA7XPQEJtEzLysoUjEmVVNByj22NfRRvyg-lRWbzOWyQRV-Zf-ARQ302EaAWI" 
     width="400"
     height="341"/>
